--- a/src/data/components.json
+++ b/src/data/components.json
@@ -3,47 +3,55 @@
     "intel" : [
       {
       "name": "i5 6600",
-      "points": "70",
-      "price": "9000"
+      "price": "9000",
+        "points": "9"
       },
       {
         "name": "i7 9900",
-        "points": "150",
-        "price": "19000"
+        "price": "19000",
+        "points": "19"
       },
       {
         "name": "i5-11400F",
-        "prise": "13000"
+        "prise": "13000",
+        "points": "13"
       },
       {
         "name": "i7-12700K",
-        "prise": "350000"
+        "prise": "35000",
+        "points": "35"
       },
       {
         "name": " i3-10105F",
-        "prise": "6500"
+        "prise": "6500",
+        "points": "6"
       }
     ],
     "amd" : [
       {
       "name": "Ryzen 9 5900X",
-      "prise": "30500"
+      "prise": "30500",
+        "points": "30"
     },
       {
         "name": "Ryzen 5 3600",
-        "prise": "9500"
+        "prise": "9500",
+        "points": "9"
       },
       {
         "name": " Ryzen 7 5800X",
-        "prise": "21000 "
+        "prise": "21000 ",
+        "points": "21"
       },
       {
         "name": "Ryzen 5 5600G ",
-        "prise": "12000"
+        "prise": "12000",
+        "points": "12"
       },
       {
         "name": "Ryzen 3 3100",
-        "prise": "8000"
+        "prise": "8000",
+        "points": "8"
       }
 
     ]
@@ -52,31 +60,39 @@
   "gpu" : {
     "nvidia" : [{
       "name": "RTX 3050",
-      "prise": "23000 "
+      "prise": "23000 ",
+      "points": "23"
     },{
       "name": "GTX 1660",
-      "prise": "21000"
+      "prise": "21000",
+      "points": "21"
     },{
       "name": "GTX 1050TI",
-      "prise": "12000"
+      "prise": "12000",
+      "points": "12"
     },{
       "name": "RTX 2060 ",
-      "prise": "26000 "
+      "prise": "26000 ",
+      "points": "26"
     }
 
     ],
     "amd" : [{
       "name": " Radeon RX 560 ",
-      "prise": "8500 "
+      "prise": "8500 ",
+      "points": "8"
     },{
       "name": "Radeon RX 5500 XT OC ",
-      "prise": "20000 "
+      "prise": "20000 ",
+      "points": "20"
     },{
       "name": "Radeon RX 6600 EAGLE ",
-      "prise": "26000 "
+      "prise": "26000 ",
+      "points": "26"
     },{
       "name": "RX 6600 XT ",
-      "prise": "35000 "
+      "prise": "35000 ",
+      "points": "35"
     }
 
     ]
@@ -85,19 +101,23 @@
   "motherboard" : {
     "amd": [{
       "name": "MSI MAG B550 TOMAHAWK ",
-      "prise": "15000 "
+      "prise": "15000",
+      "points": "15"
     },{
       "name": " MSI B450 GAMING PLUS MAX ",
-      "prise": "7500"
+      "prise": "7500",
+      "points": "7"
     }
 
     ],
     "intel": [{
       "name": "MSI H510M-A PRO ",
-      "prise": "5000 "
+      "prise": "5000 ",
+      "points": "5"
     },{
       "name": "GIGABYTE B660 Gaming X DDR4 ",
-      "prise": "12000 "
+      "prise": "12000",
+      "points": "12"
     }
 
     ]
@@ -105,7 +125,8 @@
 
   "cooling": [{
     "name": "Deepcool ICE EDGE MINI FS V2.0 ",
-    "prise": "700 "
+    "prise": "700",
+    "points": "150"
   },{
     "name": "GIGABYTE Aorus Waterforce X 240 ",
     "prise": "14000 "
